--- a/package.json
+++ b/package.json
@@ -10,12 +10,46 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~45.0.0",
-    "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-picker/picker": "^2.4.10",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "expo": "^48.0.0",
+    "expo-camera": "~13.2.1",
+    "expo-constants": "~14.2.1",
+    "expo-linking": "~4.0.1",
+    "expo-local-authentication": "~13.3.0",
+    "expo-router": "^1.5.3",
+    "expo-status-bar": "~1.4.4",
+    "formik": "^2.2.9",
+    "moment": "^2.29.4",
+    "mysql": "^2.18.1",
+    "react": "18.2.0",
+    "react-datepicker": "^4.16.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.8",
+    "react-native-dropdown": "^0.0.6",
+    "react-native-dropdown-picker": "^5.4.2",
+    "react-native-flash-message": "^0.4.1",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "^13.9.0",
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-web": "~0.18.10",
+    "react-router-dom": "^6.11.2",
+    "react-router-native": "^6.11.2",
+    "react-spring": "^9.7.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
